# ChangeLog for net-irc/unrealircd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.73 2009/11/14 01:34:34 scarabeus Exp $

*unrealircd-3.2.8.1 (14 Nov 2009)

  14 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -unrealircd-3.2.7-r2.ebuild, +unrealircd-3.2.8.1.ebuild,
  +files/unrealircd-system-cares.patch, +files/unrealircd-system-tre.patch,
  metadata.xml:
  QA: Version bump to fix bug #260806. Non maintainer commit.

  18 Sep 2009; Petteri Räty <betelgeuse@gentoo.org>
  unrealircd-3.2.7-r2.ebuild:
  Migrate to EAPI 2 in order to remove built_with_use usage.

  06 Jun 2009; Dawid Węgliński <cla@gentoo.org>
  unrealircd-3.2.7-r2.ebuild:
  Don't specify full path of installed doc files since PORTAGE_COMPRESS comes
  into play (bug #272935)

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  11 Aug 2008; Ricardo Mendoza <ricmm@gentoo.org>
  unrealircd-3.2.7-r2.ebuild:
  Add ~mips, bug #199362

  22 Dec 2007; Ulrich Mueller <ulm@gentoo.org> -unrealircd-3.2.7.ebuild:
  Remove old revision wrt bug #201682.

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  unrealircd-3.2.7-r2.ebuild:
  ppc stable, bug #201682

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> unrealircd-3.2.7-r2.ebuild:
  sparc/x86 stable wrt #201682

*unrealircd-3.2.7-r2 (12 Dec 2007)

  12 Dec 2007; Ulrich Mueller <ulm@gentoo.org> -unrealircd-3.2.7-r1.ebuild,
  +unrealircd-3.2.7-r2.ebuild:
  Set correct owner for the installed certificates, fixes bug #201996.
  Thanks to Attila Tóth <atoth@atoth.sote.hu> and Stefan Becker
  <stefan.becker@ip-exchange.de> for reporting and providing a patch.

  10 Dec 2007; Raúl Porcel <armin76@gentoo.org> unrealircd-3.2.7-r1.ebuild:
  sparc/x86 stable wrt #201682

  08 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  -unrealircd-3.2.6-r1.ebuild:
  old

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>